Remove blue background on mobile clicks and fix extended screen during game

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,6 +24,7 @@
     cursor: pointer;
     height: 40px;
     width: 40px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
   }
 
   @keyframes slideDown {
