--- a/src/styles/Game.scss
+++ b/src/styles/Game.scss
@@ -1,5 +1,6 @@
 .game__page {
   cursor: url('/red-cursor.png'), pointer;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .character {
@@ -86,10 +87,6 @@
 }
 
 @media (max-width: 850px) {
-  .game__header {
-    display: none;
-  }
-
   .character__header {
     display: flex;
     flex-direction: column;
